# textai-analyzer-api

./: .env.example  README.md  pyproject.toml
app/api/: endpoints.py
app/core/: config.py  security.py
app/services/: text_analysis_service.py
tests/: conftest.py  test_api_endpoints.py  test_security.py  test_text_analysis_service.py
